# writeragent

./: .gitignore  AGENTS.md  Makefile  README.md  gdb-catch-uno.txt  pyproject.toml  update.xml  writer_tools_circular_hires.dot
docs/: ROADMAP.md  agent-memory-and-skills.md  agent-search.md  agent_architectures_analysis.md  analysis-sub-agent.md  benchmark-cli-dev-plan.md  calc-analysis-tools.md  calc-blanks-vs-nans.md  calc-integration.md  calc-sheet-filter.md  calc-specialized-toolsets.md  calc-spreadsheet-to-python-import.md  chat-sidebar-implementation.md  collabora-online-ai-comparison.md  connection-management.md  cython-extension.md  dspy-prompt-optimization-plan.md  dynamic-layout.md  embeddings.md  enabling_numpy_in_libreoffice.md  eval-dev-plan.md  eval-ideas.md  formal_verification.md  google-sheets.md  hermes-agent-patterns.md  html_style_model_plan.md  image-generation.md  image-recognition.md  langchain-core_memory_in_writeragent.md  langchain-plan.md  libreoffice-html-math-dev-plan.md  llm-hacks.md  llm-styles.md  localization.md  math-tex.md  mcp-protocol.md  multi-document-dev-plan.md  next-steps-horde.md  numpy-serialization.md  onlyofficeai_analysis.md  (+19 more)
extension/: Addons.xcu  XPythonFunction.rdb  description.xml.tpl
locales/: writeragent.pot
mail_merge_tasks/: jules_status.json
native/writeragent_vec/: MANIFEST.in  pyproject.toml  setup.py
native/writeragent_vec/src/writeragent_vec/: pack.pyx
plugin/: main.py  prompt_function.py  testing_runner.py  version.py
scripts/: analyze_tool_call_timing.py  bench_broker.py  bench_embeddings.py  (+37 more)
(+604 files in other folders)
