[build-system]
requires = ["setuptools>=61.0", "cython>=3.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "writeragent_vec"
version = "0.1.0"
description = "Cython accelerator for WriterAgent serialization"
requires-python = ">=3.11"
authors = [
    {name = "Keith Cu", email = "keithcu@gmail.com"}
]
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.cibuildwheel]
# Build only Python 3.11-3.14
build = "cp311-* cp312-* cp313-* cp314-*"

# Skip 32-bit builds and musl if not needed (musl is slower to build and less common for LO)
# We match audio's platform list but cibuildwheel handles the specifics.
skip = "*-win32 *-manylinux_i686 *-musllinux_i686"

# Environment variables for the build
environment = { WRITERAGENT_ARCH="x86-64-v2" }

# Linux specific config
[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
# Use manylinux2014 as the baseline (matches audio contrib)
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

# macOS specific config
[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64", "universal2"]

# Windows specific config
[tool.cibuildwheel.windows]
archs = ["AMD64", "ARM64"]
